--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Kvikk Dugnad - Lett å selge, lett å frakte</title>
+  <title>Online Dugnad - Lett å selge, lett å frakte</title>
   <meta name="description" content="Digital salgsdugnad med sokker og undertøy som gir en høy fortjeneste.">
   <base href="/">
 
